tests/NormalTests/paczka1/fuzzy1/38912720.err
Error in line 7: NWvmM S517 10,8
Error in line 6: Cly0yaaiRES S507 45,4
Error in line 16: NWvmM A38 458,50
Error in line 10: NWvmM A38 100,0
Error in line 11: UPKUTJV S517 18,3
Error in line 15: S517 A38 60,2
Error in line 25: S517 A735 76,61
Error in line 26: AWsMFRDq S507 91,22
Error in line 22: Cly0yaaiRES S507 98,0
Error in line 29: S517 A735 12,8
Error in line 32: S517 S507 73,2
Error in line 31: NWvmM A735 24,6
